implemented football fan
